--- a/src/components/auth/AuthButton.module.css
+++ b/src/components/auth/AuthButton.module.css
@@ -16,22 +16,33 @@
   margin-bottom: 20px;
 }
 
-.baseButton:active {
+.icon {
+  display: flex;
+  align-items: center;
+  margin-right: 8px;
+  font-size: 1.2em;
+}
+
+.baseButton:not(:disabled):active {
   transform: scale(0.98);
 }
 
-.baseButton:hover {
+.baseButton:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.baseButton:not(:disabled):hover {
   background-color: rgb(93, 160, 83);
 }
 
-/* --- 變體 2: 社群邊框按鈕 --- */
 .social {
   background-color: transparent;
-  border: 1px solid #555; /* 灰色邊框 */
+  border: 1px solid #555;
   color: white;
-  margin-bottom: 12px; /* 按鈕之間的距離 */
+  margin-bottom: 12px;
 }
 .social:hover {
-  border-color: #fff; /* hover 時邊框變白 */
+  border-color: #fff;
   background-color: rgba(255, 255, 255, 0.05);
 }
