--- a/src/pages/signup/SignUpGender.module.css
+++ b/src/pages/signup/SignUpGender.module.css
@@ -60,9 +60,19 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background-color: #D9D9D9; 
+  background-color: #D9D9D9;
   border: 3px solid transparent;
   transition: all 0.3s ease;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.avatarImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .circleSelected {
