--- a/src/pages/home/NearbyPage.module.css
+++ b/src/pages/home/NearbyPage.module.css
@@ -84,7 +84,7 @@
   background-size: cover;
   background-position: center;
   border: 3px solid #FFD700;
-  z-index: 100;
+  /* z-index: 100; */
   position: relative;
 }
 
